--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.12.0",
     "@vue/cli-service": "^3.12.0",
+    "less": "^3.11.3",
+    "less-loader": "^6.1.1",
     "vue-template-compiler": "^2.6.10"
   }
 }
