--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "core-js": "^2.6.5",
     "element-ui": "^2.13.2",
     "font-awesome": "^4.7.0",
