--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "core-js": "^2.6.5",
     "element-ui": "^2.13.2",
     "font-awesome": "^4.7.0",
+    "moment": "^2.27.0",
     "vue": "^2.6.10",
     "vue-layer": "^1.2.0",
     "vue-router": "^3.0.3",
